# stui

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: project.md
lib/crates/stui-core/: Cargo.toml
lib/crates/stui-core/src/: component.rs  event.rs  host.rs  lib.rs  render.rs  surface.rs
lib/crates/stui-ipc/: Cargo.toml
lib/crates/stui-ipc/src/: lib.rs
lib/crates/stui-platform-desktop/: Cargo.toml
lib/crates/stui-platform-desktop/src/: host.rs  lib.rs  presenter.rs  runner.rs
lib/crates/stui-runtime/: Cargo.toml
lib/crates/stui-runtime/src/: lib.rs
playgrounds/black-box/: Cargo.toml
playgrounds/black-box/src/: lib.rs  main.rs
scripts/stui-dev/src/: main.rs
scripts/stui-pack/: Cargo.toml
scripts/stui-pack/src/: main.rs
tools/stui-dev/: Cargo.toml
