[package]
name = "stui-playground-black-box"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
stui-ipc = { path = "../../lib/crates/stui-ipc" }
stui-platform-desktop = { path = "../../lib/crates/stui-platform-desktop" }
stui-runtime = { path = "../../lib/crates/stui-runtime" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "stui-playground-black-box"
path = "src/main.rs"
