[package]
name = "stui-platform-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
stui-core = { path = "../stui-core" }
stui-runtime = { path = "../stui-runtime" }
winit = "0.30.13"
softbuffer = "0.4.8"

[lib]
path = "src/lib.rs"
